[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "daylily-omics-references"
version = "0.1.12"
description = "Tools for creating and validating Daylily omics analysis reference buckets"
readme = "README.md"
authors = [{name = "Daylily Informatics"}]
license = {file = "LICENSE"}
requires-python = "~=3.11"
# ⚠️ remove boto3 from hard deps
dependencies = [
  "aws-parallelcluster[cli]==3.13.2",
]

[project.optional-dependencies]

[project.scripts]
daylily-omics-references = "daylily_omics_references.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
